--- a/css/style.css
+++ b/css/style.css
@@ -5,117 +5,119 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    
 }
-
 html {
     scroll-behavior: smooth;
 }
-
 h1,h2,h3,h4,h5,h6,label,option{
     font-family: 'Roboto Mono', Times, serif;
+    color:#003366;
 }
-
 p,ul,ol,a{
     font-family: 'Arimo', Verdana, sans-serif;
     text-decoration: none;
     list-style: none;
+    color: #003366;
+    font-size: 1.2em;
 }
-
 /*-----header-----*/
-
 header{
     background: #003366;
     width: 100vw;
     height: 250px;
     
 }
-
 h1 img{
     position: fixed;
     margin-left: 10px;
     width: 150px;
     height: 50px;
 }
-
 header picture>img{
     margin: 10px 10px 0 0;
     width: 135px;
     
     
 }
-
 nav{
     top: 0;
     left: 0;
     width: 100%;
 }
-
+section>picture img{
+    border-radius: 100px;
+    margin-top: 20px;
+}
 #navegador+div{
     position: relative;
     top: 3em;
     display: flex;
     
 }
-
 #navegador+div h2{
     margin-top: 50px;
     margin-left: 15px;
     font-size: 1.6em;
     color: #cccccc; 
 }
-
+main{
+    background-color: #cccccc;
+}
 /*----Nosotros--*/
-
 #nosotros{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
     margin: 5px 10px 10px 10px;
-}
 
-#nosotros picture img{
-    border-radius: 100px;
 }
 
 #nosotros div{
     margin: 20px 20px 0 20px;
 }
-
 #nosotros div p{
     padding-top: 10px;
     color: #003366;
     font-size: 1.2em;
 }
-
 #nosotros h2{
     font-size: 0;
 }
 
 /*----carrito-----*/
-
+.carrito{
+    display: flex;
+    justify-content: center;
+}
 .carrousel{
-    width: 100%;
+    width: 320px;
+    height: 213px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
-
 .conteCarrousel{
-    width: 100%;
-    height: 200px;
+    width: 320px;
+    height: 213px;
     overflow: hidden;
+    display: flex;
+    flex-direction: row;
 }
-
 .itemCarrousel{
     position: relative;
     width: 100%;
     height: 100%;
 }
-
 .itemCarrouselTarjeta{
     width: 100%;
     height: 100%;
 }
-
+.itemCarrouselTarjeta picture{
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    
+}
 .itemCarrouselArrows{
     position: absolute;
     top: 0;
@@ -130,38 +132,115 @@ nav{
     padding: 20px; 
     font-size: 2em;
 }
-
 .itemCarrouselArrows > i:hover {
     cursor: pointer;
 }
-
-
-
 .conteCarrouselController{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    
 }
-
 .conteCarrouselController > a{
     text-decoration: none;
     font-size: 2em;
     color: #FF6600;
 }
-
 .itemCarrouselArrows > a > i{
     color: #FF6600;
 }
-/*------ID generales-------*/
 
+/* -----energia solar-------*/
+#energiaSolar,#paneles{
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#energiaSolar h2{
+    font-size: 1.6em;
+}
+#energiaSolar h2+p{
+    margin: 25px;
+}
+.lista{
+    width: 80vw;
+    background-color: #669999;
+    border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 30px;
+}
+.lista:first-child{
+    font-size: 1.4em;
+} 
+.lista li{
+    margin: 5px 10px 5px 20px;
+    font-size: 1em;
+    list-style-type: disc;  
+}
+/*----Paneles-----*/
+#paneles h2{
+    font-size: 1,6em;
+    margin-top: 15px;
+}
+#paneles h2 + div{
+    width: 80vw;
+    margin-top: 20px;
+}
+#paneles p{
+    margin-top: 5px;
+}
+/*------Video-----*/
+#video{
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    margin-top: -2px;
+    background-color: #003366;
+    padding-bottom: 20px;
+}
+#video iframe{
+    width: 80vw;
+    height: calc(80vw * 315 / 560);
+}
 
-
+/*-----Beneficios-----*/
+#beneficios{
+    background-color: #003366;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#beneficios h2{
+    color: #cccccc;
+    margin-top: 25px;
+    font-size: 1.6em;
+   width: 80vw;
+    
+}
+#beneficios div{
+    display: flex;
+    width: 80vw;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#beneficios img{
+    margin-top: 30px;
+    width: 200px;
+}
+#beneficios p{
+    color: #cccccc;
+    font-size: 1.2em;
+    margin-top: 15px;
+}
 /*------CLASS generales-------*/
-
 .naranja{
     color: #FF6600;
 }
-
 .boton{
     color: #cccccc;
     background-color: #79AD37;
@@ -171,56 +250,46 @@ nav{
     padding-top: 4px;
     border-radius: 15px;
 }
-
 /* HAMBURGUESA */
 #navegador{
     position: fixed;
     background: #003366;
     width: 100vw;
-    height: 3em;
+    height: 3.5em;
     z-index: 10;
 }
-
 #hamburguesa {
     position: fixed;
     right: 15px;
     top: 2.5px;
     
 }
-
 #hamburguesa li {
     list-style: none;
     width: 2.5em;
 }
-
 #hamburguesa li a {
     color: #FF6600;
     display: block;
     font-size: 2.5em;
 }
-
 #hamburguesa li:last-child {
     display: none;
 }
-
 nav:target #hamburguesa li:last-child {
     display: block;
 }  
-
-
 nav:target #hamburguesa li:first-child {
     display: none;
 }
-
 nav:target #hamburguesa li:last-child {
     display: block;
 }
-
 #barra {
     width: 100%;
-    height: calc(100vh - 3em);
+    height: calc(100vh - 2.5em);
     position: absolute;
-    top: 3em;
+    top: 2.5em;
     right: -100%;
     background: #003366;
     transition: right .25s ease-in;
@@ -229,13 +298,11 @@ nav:target #hamburguesa li:last-child {
     align-items: center;
     padding: 1rem;
 }
-
 #barra li {
     list-style: none;
     margin: 1em;
     width: 80%;
 }
-
 #barra li a {
     text-decoration: none;
     display: block;
@@ -243,12 +310,11 @@ nav:target #hamburguesa li:last-child {
     text-align: center;
     line-height: 2em;
 }
-
 nav:target #barra {
     right: 0;
 }
-
-
 #itemCarrousel-1, #itemCarrousel-2,#itemCarrousel-3{
-    scroll-padding-bottom: 50px;
+    scroll-margin-top: 50px;
+   
 }
+
