--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header{
     background: #003366;
     width: 100vw;
     height: 250px;
+
     
 }
 h1 img{
@@ -45,15 +46,18 @@ nav{
     width: 100%;
 }
 section>picture img{
-    border-radius: 100px;
+    border-radius: 100%;
     margin-top: 20px;
 }
 #navegador+div{
     position: relative;
     top: 3em;
-    display: flex;
+    display: grid;
+    grid-template-columns: 40vw 40vw;
+    justify-content: space-between;
+
     
-}
+    }
 #navegador+div h2{
     margin-top: 50px;
     margin-left: 15px;
@@ -219,25 +223,174 @@ main{
     margin-top: 25px;
     font-size: 1.6em;
    width: 80vw;
+   text-align: center;
     
 }
-#beneficios div{
-    display: flex;
-    width: 80vw;
-    align-items: center;
+.grid{
+    display: grid;
+    grid-template-columns: 70vw;
+  
     justify-content: center;
-    flex-direction: column;
+    align-content: center;
+    }
+
+.grid div{
+    align-self: center;
+    width: 80vw;
 }
 #beneficios img{
+    margin-left: 4em;
     margin-top: 30px;
     width: 200px;
 }
 #beneficios p{
+    align-self: center;
     color: #cccccc;
     font-size: 1.2em;
     margin-top: 15px;
 }
+
+/*---Calcular---*/
+#calcular{
+    background-color: #003366;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#calcular h2{
+    color: #cccccc;
+    font-size: 1.6em;
+    margin-top: 2.5em;
+    width: 80vw;
+    text-align: center;
+}
+
+#calcular p{
+    color: #cccccc;
+    width: 80vw;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+}
+/*-------CONTACTO--------*/
+#contacto{
+    background-color: #003366;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    
+}
+.itemform{
+    display: grid;
+    grid-template-columns: 80vw;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.itemform label{
+    font-weight: 600;
+    color: #cccccc;
+}
+
+.itemform input{
+    border-radius: 15px;
+    height: 25px;
+    margin-top: 5px;
+    border: none; 
+    background-color: #cccccc;
+    padding-left: 1.5em;
+    
+}
+.itemform select{
+    border-radius: 15px;   
+    margin-top: 10px;
+    border: none; 
+    color: #003366;
+    background-color: #cccccc;
+    height: 25px;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+}
+
+.itemform textarea{
+    border-radius: 15px;   
+    border: none; 
+    background-color: #cccccc;
+    resize: none;
+} 
+
+
+input[type="submit"]{
+    background-color: #79AD37;
+    padding: 0;
+    width: 30vw;
+    height: 2.5em;
+    font-size: 0.8em;
+    font-weight: 600;
+    color: white;
+    border-radius: 10px;
+    grid-column: 1/2;
+    justify-self: center;
+   
+}
+
+/*----FOOTER-----*/
+footer{
+    padding: 2em 1em 0 1em;
+    border-top: 2px solid #FF6600;
+    display: grid;
+    grid-template-columns: 40vw 40vw;
+    justify-content: center;
+    gap: 10vw;
+
+}
+
+footer picture{
+    height: 1.4em;
+}
+
+#redes{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#redes li a:any-link{
+    color:#FF6600;
+    font-size: 1.4em;
+}
+
+#redes li a:-webkit-any-link{
+    color:#FF6600;
+    font-size: 1.4em;
+}
+
+#redes li a:-moz-any-link{
+    color:#FF6600;
+    font-size: 1.4em;
+}
+
+#redes li a:hover{
+    color: #79AD37;
+}
+
+#datos {
+    display: inline-block;
+   margin: 0;
+    
+}
+#datos h2{
+    display: inline-block;
+    font-size: 1.2em;
+}
+#datos ul{
+    display: inline-block;
+    font-size: 1em;
+}
+
+
 /*------CLASS generales-------*/
+
 .naranja{
     color: #FF6600;
 }
@@ -318,3 +471,224 @@ nav:target #barra {
    
 }
 
+/*----tablet-----*/
+@media (min-width: 540px) {
+    
+    header picture>img{
+        margin: 1em;
+        width: 200px;
+        
+    }
+    #nosotros div{
+        margin-left: 2em;
+        margin-right: 2em;
+        font-size: 1.4em;
+    }
+    .carrito{
+        display: flex;
+        justify-content: center;
+    }
+    .carrousel{
+        width: 480px;
+        height: 330px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    .conteCarrousel{
+        width: 480px;
+        height: 330px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+    }
+    .itemCarrousel{
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+    .itemCarrouselTarjeta{
+        width: 100%;
+        height: 100%;
+    }
+    .itemCarrouselTarjeta picture{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;  
+    }
+    .itemCarrouselArrows{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%; 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px; 
+        font-size: 2em;
+    }
+    .itemCarrouselArrows > i:hover {
+        cursor: pointer;
+    }
+    .conteCarrouselController{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        
+    }
+    .conteCarrouselController > a{
+        text-decoration: none;
+        font-size: 2em;
+        color: #FF6600;
+    }
+    .itemCarrouselArrows > a > i{
+        color: #FF6600;
+    }
+    #energiaSolar h2{
+        font-size: 1.8em;
+        
+    }
+    #energiaSolar p{
+        font-size: 1.6em;
+        width: 80vw;
+    }
+
+    #paneles h2{
+        font-size: 1.8em;
+    }
+    #paneles p{
+        font-size: 1.6em;
+        width: 80vw;
+    }
+
+    .grid{
+    display: grid;
+    grid-template-columns: 40vw 40vw;
+    grid-gap: 2em;
+    justify-content: space-between;
+    
+    }
+    #beneficios img{
+        margin-left:0;
+    
+    }
+    #beneficios h2{
+        font-size: 1.8em;
+        width: 100vw;
+    }
+    #beneficios p{
+        font-size: 1.6em;
+        width: 40vw;
+    }
+
+    .itemform{
+        display: grid;
+        grid-template-columns: 50vw;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    
+    .itemform label{
+        font-weight: 600;
+        color: #cccccc;
+    }
+    
+    .itemform input{
+        border-radius: 15px;
+        height: 35px;
+        margin-top: 5px;
+        border: none; 
+        background-color: #cccccc;
+        padding-left: 1.5em;
+        
+    }
+    .itemform select{
+        border-radius: 15px;   
+        margin-top: 10px;
+        border: none; 
+        color: #003366;
+        background-color: #cccccc;
+        height: 35px;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+    }
+    
+    .itemform textarea{
+        border-radius: 15px;   
+        border: none; 
+        background-color: #cccccc;
+        resize: none;
+    } 
+    
+    
+    input[type="submit"]{
+        background-color: #79AD37;
+        padding: 0;
+        width: 30vw;
+        height: 2.5em;
+        font-size: 1em;
+        font-weight: 600;
+        color: white;
+        border-radius: 10px;
+        grid-column: 1/2;
+        justify-self: center;
+       
+    }
+
+    footer{
+        padding: 2em 1em 0 1em;
+        border-top: 4px solid #FF6600;
+        display: grid;
+        grid-template-columns: 30vw 30vw;
+        justify-content: center;
+        gap: 15vw;
+    
+    }
+    
+    
+    #redes{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+    #redes li a:any-link{
+        color:#FF6600;
+        font-size: 3em;
+    }
+    
+    #redes li a:-webkit-any-link{
+        color:#FF6600;
+        font-size: 3em;
+    }
+    
+    #redes li a:-moz-any-link{
+        color:#FF6600;
+        font-size: 3em;
+    }
+    
+    #redes li a:hover{
+        color: #79AD37;
+    }
+    #datos{
+        margin-top: -5em;
+    }
+    #datos h2{
+        font-size: 1.2em;
+    }
+    #datos ul{
+        font-size: 1em;
+    }
+    
+}
+
+/*-----desktop----*/
+@media (min-width: 1024px) {
+    
+        
+
+        
+
+}
